--- a/ui/buttons/buttons.module.css
+++ b/ui/buttons/buttons.module.css
@@ -24,6 +24,6 @@
     color: black;
 }
 .orange {
-    background: var(--orange);
+    background: var(--orange-gradient);
     box-shadow: var(--buttons-shadow-orange);
 }
