--- a/components/timer/timer.module.css
+++ b/components/timer/timer.module.css
@@ -14,10 +14,10 @@
     height: 210px;
     width: 210px;
     border-radius: 50%;
-    background-color: white;
+    background-color: #f5f5f5;
 }
 .progress-value {
     position: relative;
-    font-size: 40px;
+    font-size: 90px;
     font-weight: bold;
 }
