--- a/pages/fight/fight.module.css
+++ b/pages/fight/fight.module.css
@@ -17,13 +17,30 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: var(--orange-gradient);
+    background: rgba(245, 245, 245, .5);
+    backdrop-filter:  blur(2px);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 40px;
     align-items: center;
     padding: 50px;
 }
 .score {
-    filter: none;
+    width: 100%;
+    background-color: #f5f5f5;
+    text-align: center;
+    border-radius: 10px;
+    border: 4px solid #2b2b2b;
+    box-shadow: var(--buttons-shadow);
+    padding: 10px;
+}
+.result-option {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 22px;
+}
+.bold {
+    font-weight: bold;
 }
