--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -1,28 +1,40 @@
-.home-page {
+.home-page, .header-section {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 0 100px 0;
+}
+
+.home-header {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-height: 220px;
+}
+
+.header-title {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px 40px 0 40px;
-}
-.name-form, .code-form, .steps-container {
     width: 100%;
+    overflow: hidden;
+    font-size: 42px;
+    font-weight: bolder;
+    height: fit-content;
+    margin: 0;
+    height: fit-content;
+}
+.header-section {
+    height: auto;
+    justify-content: space-between;
+    padding: 20px;
+}
+.name-form, .step {
     display: flex;
     flex-direction: column;
-    gap:  20px;
-}
-.step {
+    gap: 15px;
     width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 20px;
-}
-.footer {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    padding: 0;
 }
