--- a/pages/lobby/lobby.module.css
+++ b/pages/lobby/lobby.module.css
@@ -12,6 +12,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    border: 4px solid #2b2b2b;
+    padding: 15px;
+    box-shadow: var(--buttons-shadow);
 }
 .player {
     display: flex;
@@ -34,4 +39,7 @@
     display: flex;
     justify-content: space-around;
     padding: 0;
+}
+.bold {
+    font-weight: 900;
 }
