--- a/ui/buttons/buttons.module.css
+++ b/ui/buttons/buttons.module.css
@@ -27,3 +27,7 @@
     background: var(--orange-gradient);
     box-shadow: var(--buttons-shadow-orange);
 }
+.black {
+    background: var(--black);
+    box-shadow: 0px 8px 0px 0 rgba(0, 0, 0, 1);
+}
