--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -30,7 +30,8 @@
 .header-section {
     height: auto;
     justify-content: space-between;
-    padding: 20px;
+    padding: 30px;
+    gap: 30px;
 }
 .name-form, .step {
     display: flex;
