--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -9,11 +9,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
     width: 100%;
     overflow: hidden;
-    font-size: 42px;
+    font-size: 36px;
     font-weight: bolder;
     height: fit-content;
     margin: 0;
     height: fit-content;
+    position: relative;
 }
