--- a/ui/text-fields/text-fields.module.css
+++ b/ui/text-fields/text-fields.module.css
@@ -8,8 +8,8 @@
 }
 
 .input-label {
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 700;
 }
 .input {
     width: 100%;
@@ -20,11 +20,18 @@
     transition: all .1s;
     text-align: center;
     font-weight: 600;
+    box-shadow: var(--buttons-shadow);
+    border: 4px solid var(--black);
+}
+.input:active {
+    transform: translateY(7px);
+    box-shadow: noe;
+
 }
 .input:focus {
     transform: translateY(-7px);
     border: 4px solid var(--black);
-    box-shadow: var(--buttons-shadow);
+    box-shadow: 0px 16px 0px 0 rgba(0, 0, 0, 1);
     outline: none;
 }
 .valued {
