--- a/components/gameroom-card/gameroom-card.module.css
+++ b/components/gameroom-card/gameroom-card.module.css
@@ -7,6 +7,7 @@
     padding: 20px;
     border-radius: 10px;
     gap: 10px;
+    transition: all .1s;
     background-color: #f5f5f5;
     border: 4px solid #2b2b2b;
 }
@@ -37,4 +38,12 @@
 .full {
     color: var(--black);
     background: var(--red);
+}
+.error-message {
+    color: var(--red);
+    font-weight: 600;
+    width: 100%;
+    text-align: center;
+    grid-column: 1/3;
+    opacity: 1;
 }
