--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -4,7 +4,8 @@
     width: 100%;
     height: 100vh;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 50px;
     padding: 50px 0 100px 0;
 }
 
@@ -33,9 +34,12 @@
     padding: 30px;
     gap: 30px;
 }
-.name-form, .step {
+.name-form, .step, .code-form {
     display: flex;
     flex-direction: column;
     gap: 15px;
     width: 100%;
+}
+.step, .code-form {
+    gap: 30px;
 }
