--- a/components/waiting.tsx/waiting.module.css
+++ b/components/waiting.tsx/waiting.module.css
@@ -6,7 +6,7 @@
         transform: translateY(0px);
     }
 }
-.lines-container {
+.lines-container, .dots-container {
     display: flex;
     gap: 3px;
     overflow: hidden;
@@ -19,13 +19,20 @@
     background: #888;
     animation: waiting 1.2s infinite;
 }
-.line:nth-child(1) {
+.dot {
+    background-color: black;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    animation: waiting 1.2s infinite;
+}
+.line:nth-child(1), .dot:nth-child(1) {
     animation: waiting 1.2s 0 infinite;
 }
-.line:nth-child(2) {
+.line:nth-child(2), .dot:nth-child(2) {
     animation: waiting 1.2s .2s infinite;
 }
-.line:nth-child(3) {
+.line:nth-child(3), .dot:nth-child(3) {
     animation: waiting 1.2s .4s infinite;
 }
 .line:nth-child(4) {
