--- a/ui/buttons/buttons.module.css
+++ b/ui/buttons/buttons.module.css
@@ -31,3 +31,8 @@
     background: var(--black);
     box-shadow: 0px 8px 0px 0 rgba(0, 0, 0, 1);
 }
+.back {
+    color: black;
+    background: var(--grey);
+    box-shadow: var(--buttons-shadow-grey);
+}
