--- a/pages/hooks/hooks.module.css
+++ b/pages/hooks/hooks.module.css
@@ -1,4 +1,4 @@
-.home-page, .header-section {
+.hooks-page {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -9,37 +9,33 @@
     padding: 50px 0 100px 0;
 }
 
-.home-header {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-height: 220px;
-}
-
-.header-title {
+.current-game {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    overflow: hidden;
-    font-size: 42px;
-    font-weight: bolder;
-    height: fit-content;
-    margin: 0;
-    height: fit-content;
-}
-.header-section {
-    height: auto;
-    justify-content: space-between;
-    padding: 30px;
-    gap: 30px;
-}
-.name-form, .step, .code-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
     width: 100%;
 }
-.step, .code-form {
-    gap: 30px;
+.host, .guest {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr;
+    column-gap: 40px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 4px solid var(--black);
+    box-shadow: var(--buttons-shadow);
+    background-color: #f5f5f5;
+}
+.player-name {
+    grid-column: 1;
+    grid-row: 1;
+    align-self: flex-end;
+}
+.player-status {
+    grid-column: 1;
+    grid-row: 2;
+    align-self: flex-start;
+}
+.player-move {
+    grid-column: 2;
+    grid-row: 1/3
 }
