--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -43,3 +43,9 @@
 .step, .code-form {
     gap: 30px;
 }
+.error__message {
+    text-align: center;
+    font-weight: 900;
+    font-size: 18px;
+    color: var(--red);
+}
