--- a/components/gameroom-card/gameroom-card.module.css
+++ b/components/gameroom-card/gameroom-card.module.css
@@ -7,7 +7,7 @@
     padding: 20px;
     border-radius: 10px;
     gap: 10px;
-    transition: all .1s;
+    transition: height .1s;
     background-color: #f5f5f5;
     border: 4px solid #2b2b2b;
 }
