--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@
   --blue:#0d6efd;
   --red-100: #f6677a;
   --red: #f52d47;
+  --green: #67f697;
+  --green-700: #27b657;
   --back: #d2d2d2;
   --orange: #ff9752;
   --black: #2b2b2b;
