--- a/components/result-card/result-card.module.css
+++ b/components/result-card/result-card.module.css
@@ -21,11 +21,14 @@
     padding: 5px;
     border-radius: 0 0 6px 6px;
 }
-.win {
+.me {
     background-color: #5EEA8E;
 }
-.loss {
+.rival {
     background-color: #F28383;
+}
+.draw {
+    background-color: #848484;
 }
 .result-label {
     color: white;
